Change color scheme

--- a/app/assets/stylesheets/components/nav_bar.scss
+++ b/app/assets/stylesheets/components/nav_bar.scss
@@ -1,5 +1,16 @@
 .nav-bar {
   .title {
-    margin-left: 10px;
+    margin-left: 15px;
+    color: white !important;
   }
+
+}
+
+.auth-tab {
+  background-color: #757575 !important;
+  color: white !important;
+}
+
+.auth-form {
+  color: black;
 }
